--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,15 @@
 {
-   "repositories": [
+    "name": "your-vendor-name/module-name",
+    "type": "magento-module",
+    "license":"OSL-3.0",
+    "description":"A short one line description of your module",
+    "authors":[
         {
-            "type": "vcs",
-            "url": "git@github.com:MageTest/prophecy.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:MageTest/phpspec.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:svalaskevicius/BehatMage.git"
+            "name":"Author Name",
+            "email":"author@example.com"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
         "magento-hackathon/magento-composer-installer": "*"
-    },
-    "type": "magento-module",
-    "require-dev": {
-        "magetest/magento-phpspec-extension": "dev-develop",
-        "behat/behat":"*",
-        "behat/mink": "*",
-        "fabpot/goutte": "*@dev",
-        "behat/mink-extension": "*",
-        "behat/mink-goutte-driver": "*",
-        "behat/mink-selenium2-driver": "*",
-        "behat/mink-selenium-driver": "*",
-        "mockery/mockery": "dev-master@dev",
-        "magetest/magento-behat-extension": "dev-feature/refactor",
-        "sensiolabs/behat-page-object-extension": "*",
-        "bossa/phpspec2-expect": "dev-master"
-    },
-    "config": {
-        "bin-dir": "bin"
-    },
-    "minimum-stability": "dev",
-    "autoload": {
-        "psr-0": {
-            "MageTest\\PhpSpec\\MagentoExtension": "src",
-            "": [
-                "public/app/code/community",
-                "public/app/code/local",
-                "public/app/code/core",
-                "public/app",
-                "public/lib"
-            ],
-            "Mage" : "public/app/code/core"
-        }
     }
 }
