--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "elasticsearch/river"]
 	path = elasticsearch/river
-	url = https://github.com/scharron/elasticsearch-river-mysql.git
+	url = git@github.com:svalaskevicius/elasticsearch-river-mysql.git
